--- a/index.html
+++ b/index.html
@@ -49,12 +49,27 @@
             transform: scale(1.2);
         }
 
+        .social-links img[title] {
+            cursor: pointer;
+        }
+
         footer {
             text-align: center;
             margin-top: 50px;
             color: #888;
         }
     </style>
+    <!-- Script tambahan -->
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '560956a54d4d790d28327ecf1229a1e9',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+        document.write('<scr' + 'ipt type="text/javascript" src="//chalkedretrieval.com/560956a54d4d790d28327ecf1229a1e9/invoke.js"></scr' + 'ipt>');
+    </script>
 </head>
 
 <body>
@@ -62,21 +77,21 @@
         <h1>Welcome to My Landing Page</h1>
         <div class="social-links">
             <a href="https://discord.com/invite/gzTwBqG2xK" target="_blank">
-                <img src="https://www.pngkit.com/png/full/17-179788_discord-logo-png.png" alt="Discord">
+                <img src="https://www.pngkit.com/png/full/17-179788_discord-logo-png.png" alt="Discord" title="Join our Discord server">
             </a>
             <a href="https://t.me/gutampsofficialx" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png" alt="Telegram">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png" alt="Telegram" title="Join our Telegram group">
             </a>
             <a href="https://www.gutampsofficial.com/" target="_blank">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgownqVEsz4K4Nd0Vd9BTCx19-SJbmJXiZ7PGqJ3Tz7eFhFVodHH-HDGD-L1f3YNQ5bpgT6fbKVMKdc-A9yMbx4T00XcfsrYo-W31vvnHXJP2ZJD8Xn4tUlDKvy_OEEKcWeBlulde44bHAyESX16PkFYosKJRMWQxmVO4cYT5GL53AryPDlQn4er2Srgys/s320/Logo%20Youtube.png" alt="Website">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgownqVEsz4K4Nd0Vd9BTCx19-SJbmJXiZ7PGqJ3Tz7eFhFVodHH-HDGD-L1f3YNQ5bpgT6fbKVMKdc-A9yMbx4T00XcfsrYo-W31vvnHXJP2ZJD8Xn4tUlDKvy_OEEKcWeBlulde44bHAyESX16PkFYosKJRMWQxmVO4cYT5GL53AryPDlQn4er2Srgys/s320/Logo%20Youtube.png" alt="Website" title="Visit our Website">
             </a>
             <a href="https://github.com/gutampsid" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="Github">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="Github" title="Visit our Github">
             </a>
         </div>
     </div>
     <footer>
-        &copy; 2024 Your Name. All rights reserved.
+        &copy; 2024 Gutamps. All rights reserved.
     </footer>
 </body>
 
