--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1>Welcome to My Landing Page</h1>
         <div class="social-links">
             <a href="https://discord.com/invite/gzTwBqG2xK" target="_blank">
-                <img src="https://www.pngkit.com/png/full/17-179788_discord-logo-png.png" alt="Discord" title="Join our Discord server">
+                <img src="https://i1.sndcdn.com/artworks-000257821133-b5jbag-t500x500.jpg" alt="Discord" title="Join our Discord server">
             </a>
             <a href="https://t.me/gutampsofficialx" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png" alt="Telegram" title="Join our Telegram group">
