--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
             margin-top: 50px;
             color: #888;
         }
+
+        /* Media query untuk perangkat seluler */
+        @media (max-width: 768px) {
+            .container {
+                padding: 20px;
+            }
+
+            .social-links {
+                flex-wrap: wrap;
+            }
+
+            .social-links a {
+                margin-bottom: 20px;
+            }
+        }
     </style>
 </head>
 
