--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             margin: 0;
             padding: 0;
             background-color: #f8f8f8;
+            background-image: url('https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNG1kbnhndTZ2ZXE4b254OWk1cXgweW1kN3ltajNuMzY4d25nbGxxYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/KEATEV6uaagupaQEXW/giphy.gif'); /* Ganti dengan URL gambar yang diinginkan */
+            background-size: cover;
+            background-position: center;
+            animation: backgroundAnimation 30s infinite alternate;
         }
 
         .container {
@@ -21,7 +25,7 @@
 
         h1 {
             font-size: 48px;
-            color: #333;
+            color: #da19d3;
             text-align: center;
             margin-bottom: 30px;
         }
@@ -56,7 +60,17 @@
         footer {
             text-align: center;
             margin-top: 50px;
-            color: #888;
+            color: #da19d3;
+        }
+
+        /* Keyframes untuk animasi background */
+        @keyframes backgroundAnimation {
+            0% {
+                background-position: 0% 50%;
+            }
+            100% {
+                background-position: 100% 50%;
+            }
         }
 
         /* Media query untuk perangkat seluler */
