--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
             background-color: #f8f8f8;
-            background-image: url('https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNG1kbnhndTZ2ZXE4b254OWk1cXgweW1kN3ltajNuMzY4d25nbGxxYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/KEATEV6uaagupaQEXW/giphy.gif'); /* Ganti dengan URL gambar yang diinginkan */
+            background-image: url('https://wallpaperaccess.com/full/5927911.gif'); /* Ganti dengan URL gambar yang diinginkan */
             background-size: cover;
             background-position: center;
             animation: backgroundAnimation 30s infinite alternate;
