--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <a href="https://github.com/gutampsid" target="_blank" title="GitHub">
         <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
       </a>
+      <a href="https://www.youtube.com/@GutampsOfficial" target="_blank" title="YouTube">
+        <img src="https://freepnglogo.com/images/all_img/1701508703YouTube-Icon-PNG.png" alt="GitHub">
+      </a>
     </div>
 
   <script src="main.js"></script>
