--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Connect with Gutamps Official through Discord, Telegram, GitHub, and more.">
+  <meta name="keywords" content="Gutamps, Discord, Telegram, GitHub, Landing Page, Developer">
+  <meta name="author" content="Gutamps Official">
+  <link rel="icon" href="gtps.png" type="image/png">
   <title>Landing Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="preloader"></div>
 
   <div class="overlay"></div>
 
@@ -27,8 +32,16 @@
       <a href="https://github.com/gutampsid" target="_blank" title="GitHub">
         <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
       </a>
+      <a href="https://www.youtube.com/@GutampsOfficial" target="_blank" title="YouTube">
+        <img src="https://freepnglogo.com/images/all_img/1701508703YouTube-Icon-PNG.png" alt="GitHub">
+      </a>
     </div>
 
   <script src="main.js"></script>
+
+  <footer style="margin-top: 30px; font-size: 0.9rem; color: #aaa;">
+  &copy; 2025 Gutamps Official. All rights reserved.
+  </footer>
+
 </body>
 </html>
