--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <script src="main.js"></script>
 
   <footer style="margin-top: 30px; font-size: 0.9rem; color: #aaa;">
-  &copy; 2025 Gutamps Official. All rights reserved.
+  &copy; 2025 Gutamps Official
   </footer>
 
 </body>
