--- a/index.html
+++ b/index.html
@@ -37,6 +37,64 @@
       </a>
     </div>
 
+ <section class="faq-section">
+  <h2>Frequently Asked Questions</h2>
+
+  <div class="faq">
+    <button class="faq-question">What is Gutamps Official?</button>
+    <div class="faq-answer">
+      <p>Gutamps Official is a community and platform focused on technology and PlayStation 3 gaming. We connect through Discord and Telegram for personal communication, and use GitHub to share and work together on projects..</p>
+    </div>
+  </div>
+
+  <div class="faq">
+    <button class="faq-question">How can I join the community?</button>
+    <div class="faq-answer">
+      <p>You can join us through the social links above, especially via Discord and Telegram where we are most active.</p>
+    </div>
+  </div>
+
+  <div class="faq">
+    <button class="faq-question">Is there a membership fee?</button>
+    <div class="faq-answer">
+      <p>No, joining Gutamps Official is completely free!</p>
+    </div>
+  </div>
+
+    <div class="faq">
+    <button class="faq-question">Can I contribute to the project?</button>
+    <div class="faq-answer">
+      <p>Yes, contributions are welcome! You can contribute by sharing knowledge or helping others in the Discord forum. If your input is helpful and you stay active in the community, you may be given the Top Contributor role.</p>
+    </div>
+  </div>
+
+  <div class="faq">
+    <button class="faq-question">Are there any community rules?</button>
+    <div class="faq-answer">
+      <p>Please be respectful, avoid spam, and follow the community guidelines. Full rules are pinned in our Discord channel. We do our best to reduce spam messages, including those sent by bots or automated systems, especially ones linking to harmful, violent, or adult websites.</p>
+    </div>
+  </div>
+
+<div class="faq">
+  <button class="faq-question">How should I handle private messages from strangers?</button>
+  <div class="faq-answer">
+    <p>
+      We encourage all members to stay aware and think carefully when receiving private messages, especially those promising gifts, prizes, or other offers. Please do not trust or click on suspicious links. Your awareness is the best protection against scams or misleading messages.
+    </p>
+  </div>
+</div>
+
+<div class="faq">
+  <button class="faq-question">What kind of behavior is expected in the community?</button>
+  <div class="faq-answer">
+    <p>
+      We expect everyone to be respectful, helpful, and kind. Avoid spamming, hate speech, or any actions that disturb the community. Please read and follow our rules posted on the #rules channel in Discord.
+    </p>
+  </div>
+</div>
+
+</section>
+
   <script src="main.js"></script>
 
   <footer style="margin-top: 30px; font-size: 0.9rem; color: #aaa;">
