--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
     &copy; 2025 Gutamps Official
   </footer>
 
-  <script src="main.js"></script>
+  <script src="main.js" defer></script>
 </body>
 </html>
